--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "bunx biome lint ./src",
+    "prepare": "panda codegen",
+    "lint:apply": "bunx biome check --write ./src",
+    "format": "bunx biome format ./src",
+    "format:apply": "bunx biome format --write ./src"
   },
   "dependencies": {
+    "@langchain/openai": "^0.2.7",
+    "langchain": "^0.2.16",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "1.8.3",
+    "@pandacss/dev": "^0.45.1",
+    "@pandacss/studio": "^0.45.1",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "lefthook": "^1.7.14",
+    "typescript": "^5"
   }
 }
