--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "langchain": "^0.2.16",
     "next": "^14.2.5",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
